--- a/src/assets/scss/_medias.scss
+++ b/src/assets/scss/_medias.scss
@@ -1,32 +1,37 @@
 .medias {
 
-    .follow-us a {
-        @include mediaQuery(mobile-end) {
-            display: inline-flex;
-            align-items: center;
+    .follow-us {
+
+        display: flex;
+
+        a {
+            @include mediaQuery(mobile-end) {
+                display: inline-flex;
+                align-items: center;
+            }
+        }
+
+        &--text {
+            @include mediaQuery(mobile-portrait-end) {
+                font-size: .9rem;
+            }
         }
     }
 
-    .follow-us--text {
-        @include mediaQuery(mobile-portrait-end) {
-           font-size: .9rem;
-        }
+    .iframe-container {
+        position: relative;
+        padding-bottom: 56.25%; /* ratio 16/9 */
+        height: 0; overflow: hidden;
+        clear: both;
     }
 
-    // .video-container {
-    //     position: relative;
-    //     padding-bottom: 56.25%; /* ratio 16/9 */
-    //     height: 0; overflow: hidden;
-    //     clear: both;
-    // }
-
-    // .video-container iframe,
-    // .video-container object,
-    // .video-container embed {
-    //     position: absolute;
-    //     top: 0;
-    //     left: 0;
-    //     width: 100%;
-    //     height: 100%;
-    // }
+    .iframe-container iframe,
+    .iframe-container object,
+    .iframe-container embed {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
