--- a/src/assets/scss/_useful.scss
+++ b/src/assets/scss/_useful.scss
@@ -16,16 +16,16 @@
 }
 
 img.left {
-    margin-right: 1em
+    margin-right: 1rem
 }
 
 img.right {
-    margin-left: 1em
+    margin-left: 1rem
 }
 
 img.left,
 img.right {
-    margin-bottom: 1em;
+    margin-bottom: 1rem;
 }
 
 // Modification de texte
@@ -74,11 +74,11 @@ em,
 }
 
 .mt1 {
-    margin-top: 1em;
+    margin-top: 1rem;
 }
 
 .mt2 {
-    margin-top: 2em;
+    margin-top: 2rem;
 }
 
 .mr0 {
@@ -86,11 +86,11 @@ em,
 }
 
 .mr1 {
-    margin-right: 1em;
+    margin-right: 1rem;
 }
 
 .mr2 {
-    margin-right: 2em;
+    margin-right: 2rem;
 }
 
 .mb0 {
@@ -98,11 +98,11 @@ em,
 }
 
 .mb1 {
-    margin-bottom: 1em;
+    margin-bottom: 1rem;
 }
 
 .mb2 {
-    margin-bottom: 2em;
+    margin-bottom: 2rem;
 }
 
 .ml0 {
@@ -110,11 +110,11 @@ em,
 }
 
 .ml1 {
-    margin-left: 1em;
+    margin-left: 1rem;
 }
 
 .ml2 {
-    margin-left: 2em;
+    margin-left: 2rem;
 }
 
 .m0 {
@@ -122,11 +122,11 @@ em,
 }
 
 .m1 {
-    margin: 1em;
+    margin: 1rem;
 }
 
 .m2 {
-    margin: 2em;
+    margin: 2rem;
 }
 
 // Padding
@@ -135,11 +135,11 @@ em,
 }
 
 .pt1 {
-    padding-top: 1em;
+    padding-top: 1rem;
 }
 
 .pt2 {
-    padding-top: 2em;
+    padding-top: 2rem;
 }
 
 .pr0 {
@@ -147,11 +147,11 @@ em,
 }
 
 .pr1 {
-    padding-right: 1em;
+    padding-right: 1rem;
 }
 
 .pr2 {
-    padding-right: 2em;
+    padding-right: 2rem;
 }
 
 .pb0 {
@@ -159,11 +159,11 @@ em,
 }
 
 .pb1 {
-    padding-bottom: 1em;
+    padding-bottom: 1rem;
 }
 
 .pb2 {
-    padding-bottom: 2em;
+    padding-bottom: 2rem;
 }
 
 .pl0 {
@@ -171,11 +171,11 @@ em,
 }
 
 .pl1 {
-    padding-left: 1em;
+    padding-left: 1rem;
 }
 
 .pl2 {
-    padding-left: 2em;
+    padding-left: 2rem;
 }
 
 .p0 {
@@ -183,11 +183,11 @@ em,
 }
 
 .p1 {
-    padding: 1em;
+    padding: 1rem;
 }
 
 .p2 {
-    padding: 2em;
+    padding: 2rem;
 }
 
 .w100 {
