feat: dynamic template for loop tag

--- a/index.ejs
+++ b/index.ejs
@@ -52,35 +52,34 @@
 <body id="page-top">
 
   <!-- Navigation -->
-  <%= require('./src/template/NavHeader/nav.ejs')() %>
+  <%- require('./src/template/NavHeader/nav.ejs')() %>
 
   <!-- Header -->
-  <%= require('./src/template/NavHeader/header.ejs')() %>
+  <%- require('./src/template/NavHeader/header.ejs')() %>
 
   <!-- Association -->
-  <%= require('./src/template/Association/association.ejs')() %>
+  <%- require('./src/template/Association/association.ejs')() %>
 
   <!-- Nos Actions -->
-  <%= require('./src/template/Actions/ourActions.ejs')() %>
+  <%- require('./src/template/Actions/ourActions.ejs')() %>
 
   <!-- Le Projet -->
-  <%= require('./src/template/Project/ourProject.ejs')() %>
+  <%- require('./src/template/Project/ourProject.ejs')() %>
 
   <!-- Médias -->
-  <%= require('./src/template/Media/media.ejs')() %>
+  <%- require('./src/template/Media/media.ejs')() %>
 
   <!-- Nous Soutenir -->
-  <%= require('./src/template/Support/supportUs.ejs')() %>
+  <%- require('./src/template/Support/supportUs.ejs')() %>
 
   <!-- Contact -->
-  <%= require('./src/template/Contact/contactUs.ejs')() %>
+  <%- require('./src/template/Contact/contactUs.ejs')() %>
 
   <!-- Footer -->
-  <%= require('./src/template/Footer/footer.ejs')() %>
+  <%- require('./src/template/Footer/footer.ejs')() %>
 
   <!-- Portfolio Modals -->
-  <%= require('./src/template/Modal/modal.ejs')() %>
-
+  <%- require('./src/template/Modal/modal.ejs')() %>
 
 </body>
 
