--- a/src/template/Actions/ourActions.ejs
+++ b/src/template/Actions/ourActions.ejs
@@ -1,3 +1,107 @@
+  <%_ const portfolioCard = [
+    {
+      anchor: "portfolioModal1",
+      image: "dons-alimentaires-thumbnail",
+      title: "Opérations Dons Alimentaires",
+      content: "Récolte de fonds pour les démunis"
+    },
+    {
+      anchor: "portfolioModal2",
+      image: "carritatif-ajk-thumbnail",
+      title: "Evènements caritatif",
+      content: "Tournoi de foot - Barbecue"
+    },
+    {
+      anchor: "portfolioModal3",
+      image: "assoc-presentation-thumbnail",
+      title: "Soirée de présentation",
+      content: "Projection des projets"
+    },
+    {
+      anchor: "portfolioModal4",
+      image: "voyage-guinee-thumbnail",
+      title: "Voyage en Guinée",
+      content: "Réportage sur le système sanitaire"
+    },
+    {
+      anchor: "portfolioModal5",
+      image: "gala-ajk-thumbnail",
+      title: "Présentation du Projet du dispensaire",
+      content: "Récolte de fonds"
+    },
+    {
+      anchor: "portfolioModal6",
+      image: "travaux-ajk-thumbnail",
+      title: "Lancement de la construction",
+      content: "Construction du futur poste de santé"
+    },
+    {
+      anchor: "portfolioModal7",
+      image: "travaux-ajk-generaliste-thumbnail",
+      title: "1ère phase de construction du pôle généraliste",
+      content: "Pôle généraliste"
+    },
+    {
+      anchor: "portfolioModal8",
+      image: "travaux-ajk-generaliste-2-thumbnail",
+      title: "2ème phase de construction du pôle généraliste",
+      content: "Pôle généraliste"
+    }
+  ]  _%>
+  <%_ const portfolioTimeLine = [
+    {
+      image: "dons-alimentaires-actions",
+      date: "Mai 2016",
+      title: "Opérations Dons Alimentaires",
+      content: "Récolte de fonds; achat denrées alimentaires pour les populations démunies de Kakandé"
+    },
+    {
+      class: "timeline-inverted",
+      image: "carritatif-ajk-actions",
+      date: "Juillet 2016",
+      title: "Evènement caritatif",
+      content: "Tournois de foot – Barbecue"
+    },
+    {
+      image: "presentation-ajk-actions",
+      date: "Avril 2017",
+      title: "Présentation de l'association",
+      content: "Présentation générale de l’association et de ses projets"
+    },
+    {
+      class: "timeline-inverted",
+      image: "voyage-guinee-actions",
+      date: "Juillet 2017",
+      title: "Voyage en Guinée",
+      content: "Voyage reportage et enquête en Guinée sur le Système de santé"
+    },
+    {
+      image: "gala-ajk-actions",
+      date: "Octobre 2017",
+      title: "Soirée de présentation du Dispensaire",
+      content: "Récolte de fonds"
+    },
+    {
+      class: "timeline-inverted",
+      image: "travaux-ajk-actions",
+      date: "Février 2018",
+      title: "Lancement de la construction",
+      content: "Construction du futur poste de santé Pôle Pharmacie"
+    },
+    {
+      image: "travaux-ajk-2",
+      date: "Janvier 2019",
+      title: "1ère phase de construction du pôle généraliste",
+      content: "Pôle Généraliste"
+    },
+    {
+      class: "timeline-inverted",
+      image: "travaux-ajk-3",
+      date: "Juillet 2020",
+      title: "2ème phase de construction du pôle généraliste",
+      content: "Pôle Généraliste"
+    }
+  ] _%>
   <section class="bg-light parralax-section" id="portfolio">
     <div class="container">
       <div class="row">
@@ -6,134 +110,24 @@
         </div>
       </div>
       <div class="row">
+        <%_ portfolioCard.forEach(card => { _%>
         <div class="col-md-4 col-sm-6 portfolio-item">
           <div class="portfolio-card boxShadow">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+            <a class="portfolio-link" data-toggle="modal" href="#<%= card.anchor %>">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid lazyload" data-src="images/portfolio/dons-alimentaires-thumbnail.jpg" alt="">
+              <img class="img-fluid lazyload" data-src="images/portfolio/<%= card.image %>.jpg" alt="<%= card.image %>">
             </a>
             <div class="portfolio-caption">
-              <h4>Opérations Dons Alimentaires</h4>
-              <p class="text-muted">Récolte de fonds pour les démunis</p>
+              <h4><%= card.title %></h4>
+              <p class="text-muted"><%= card.content %></p>
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <div class="portfolio-card boxShadow">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fa fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid lazyload" data-src="images/portfolio/carritatif-ajk-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Evènements caritatif</h4>
-              <p class="text-muted">Tournoi de foot - Barbecue</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <div class="portfolio-card boxShadow">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fa fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid lazyload" data-src="images/portfolio/assoc-presentation-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Soirée de présentation</h4>
-              <p class="text-muted">Projection des projets</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <div class="portfolio-card boxShadow">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fa fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid lazyload" data-src="images/portfolio/voyage-guinee-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Voyage en Guinée</h4>
-              <p class="text-muted">Réportage sur le système sanitaire</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <div class="portfolio-card boxShadow">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fa fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid lazyload" data-src="images/portfolio/gala-ajk-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Présentation du Projet du dispensaire</h4>
-              <p class="text-muted">Récolte de fonds</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <div class="portfolio-card boxShadow">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fa fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid lazyload" data-src="images/portfolio/travaux-ajk-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Lancement de la construction</h4>
-              <p class="text-muted">Construction du futur poste de santé</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <div class="portfolio-card boxShadow">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fa fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid lazyload" data-src="images/portfolio/travaux-ajk-generaliste-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>1<sup>ère</sup> phase de construction du pôle généraliste</h4>
-              <p class="text-muted">Pôle généraliste</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <div class="portfolio-card boxShadow">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal8">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fa fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid lazyload" data-src="images/portfolio/travaux-ajk-generaliste-2-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>2<sup>ème</sup> phase de construction du pôle généraliste</h4>
-              <p class="text-muted">Pôle généraliste</p>
-            </div>
-          </div>
-        </div>
+        <%_ }); _%>
       </div>
       <hr>
       <div class="row mt-4">
@@ -142,121 +136,24 @@
         </div>
         <div class="col-lg-12">
           <ul class="timeline">
-            <li>
+          <%_ portfolioTimeLine.forEach(timeline => { _%>
+            <li class="<%= timeline.class %>">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid lazyload" data-src="images/about/dons-alimentaires-actions.jpg" alt="">
+                <img class="rounded-circle img-fluid lazyload" data-src="images/about/<%= timeline.image %>.jpg" alt="<%= timeline.image %>">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <span class="d-block bold date-title">Mai 2016</span>
-                  <h4 class="subheading">Opérations Dons Alimentaires</h4>
+                  <span class="d-block bold date-title"><%= timeline.date %></span>
+                  <h4 class="subheading"><%= timeline.title %></h4>
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">
-                    Récolte de fonds; achat denrées alimentaires pour les populations démunies de Kakandé
+                    <%= timeline.content %>
                   </p>
                 </div>
               </div>
             </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid lazyload" data-src="images/about/carritatif-ajk-actions.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <span class="d-block bold date-title">Juillet 2016</span>
-                  <h4 class="subheading">Evènement caritatif</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Tournois de foot – Barbecue</p>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid lazyload" data-src="images/about/presentation-ajk-actions.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <span class="d-block bold date-title">Avril 2017</span>
-                  <h4 class="subheading">Présentation de l'association</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Présentation générale de l’association et de ses projets</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid lazyload" data-src="images/about/voyage-guinee-actions.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <span class="d-block bold date-title">Juillet 2017</span>
-                  <h4 class="subheading">Voyage en Guinée</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Voyage reportage et enquête en Guinée sur le Système de santé.</p>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid lazyload" data-src="images/about/gala-ajk-actions.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <span class="d-block bold date-title">Octobre 2017</span>
-                  <h4 class="subheading">Soirée de présentation du Dispensaire</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Récolte de fonds</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid lazyload" data-src="images/about/travaux-ajk-actions.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <span class="d-block bold date-title">Février 2018</span>
-                  <h4 class="subheading">Lancement de la construction</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Construction du futur poste de santé<br />
-                    Pôle Pharmacie</p>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid lazyload" data-src="images/about/travaux-ajk-2.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <span class="d-block bold date-title">Janvier 2019</span>
-                  <h4 class="subheading">1<sup>ère</sup> phase de construction du pôle généraliste</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Pôle Généraliste</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid lazyload" data-src="images/about/travaux-ajk-3.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <span class="d-block bold date-title">Juillet 2020</span>
-                  <h4 class="subheading">2<sup>ème</sup> phase de construction du pôle généraliste</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Pôle Généraliste</p>
-                </div>
-              </div>
-            </li>
+          <%_ }); _%>
             <li>
               <div class="timeline-image">
                 <h4>Notre
