feat: add file manager plugin to copy doc & mail

--- a/src/template/Footer/footer.ejs
+++ b/src/template/Footer/footer.ejs
@@ -42,7 +42,7 @@
           </div>
         </div>
         <div class="col-lg-4">
-          <span class="copyright">Copyright <span class="footer-copyright"></span> &copy; AJK - Tous droits réservés</span>
+          <span class="copyright">Copyright 2018-<span class="footer-copyright"></span> &copy; AJK - Tous droits réservés</span>
         </div>
       </div>
     </div>
