--- a/src/assets/scss/_services.scss
+++ b/src/assets/scss/_services.scss
@@ -1,9 +1,9 @@
 // Styling for the services section
 .service-heading {
-  margin: 15px 0;
+  margin: rem-calc(15) 0;
   text-transform: none;
   color: $orange-ajk;
-  font-size: 20px;
+  font-size: rem-calc(20);
   @include caviar-dream-font;
 }
 
