fix: forget word in Association Template

--- a/src/template/Project/ourProject.ejs
+++ b/src/template/Project/ourProject.ejs
@@ -31,7 +31,7 @@
           </div>
           <div class="col-lg-12">
             <h4 class="service-heading">Kakandé</h4>
-            <p>Elle regroupe 16 icts (plus précisément un ensemble de villages qui compte entre 3000 et 9000
+            <p>Elle regroupe 16 districts (plus précisément un ensemble de villages qui compte entre 3000 et 9000
               habitants). Dabankou est
               l’un de ces villages et compte environ 7000 habitants. Il représente le carrefour économique entre tous les
               petits villages
@@ -106,7 +106,7 @@
               celles qui sont sur le point d’accoucher la nuit, sont référées en ville.</p>
             <p>Cette situation contraint les habitants qui en ont la possibilité et les moyens à se déplacer dans les
               différents postes
-              de santé des autres icts voire des grandes villes (Kamsar, Boké, Conakry,..).</p>
+              de santé des autres districts voire des grandes villes (Kamsar, Boké, Conakry,..).</p>
             <span class="d-block bold italic mt-3 text-center d-md-none">(Vous pouvez slider les images vers la droite ou la
               gauche)</span>
             <div class="glide mt-4">
