--- a/src/template/Support/supportUs.ejs
+++ b/src/template/Support/supportUs.ejs
@@ -64,13 +64,47 @@
             depuis trop longtemps
             du manque d’infrastructure sanitaire convenable. Participer et soutenez-nous dans cette aventure
             humanitaire, qui permettra
-            de changer la vie de plus de 7000 personnes sans compter les villages alentours.</p>
-          <p>Pour faire un don à l'<strong>ASSOCIATION DES JEUNES DE KAKANDÉ</strong>, cliquez sur le bouton ci-dessous.
+            de changer la vie de plus de 7000 personnes sans compter les villages alentours.
           </p>
-          <div class="text-center">
+          <p>Pour faire un don à l'<strong>ASSOCIATION DES JEUNES DE KAKANDÉ</strong>,</p>
+          <hr/>
+          <p class="bold">Via HelloAsso</p>
+          <p>Cliquez sur le bouton ci-dessous pour faire un don via HelloAsso</p>
+          <div class="text-center mt-5">
             <a href="https://www.helloasso.com/associations/association-des-jeunes-de-kakande/formulaires/1/widget" class="btn btn-primary btn-xl text-uppercase" target="_blank">
               Faire un don
             </a>
+          </div>
+          <hr/>
+          <p class="bold">Via notre cagnotte CotiZup</p>
+          <p>Cliquez sur le bouton ci-dessous pour participer à notre cagnotte CotiZup</p>
+          <div class="text-center mt-5">
+            <a href="https://www.cotizup.com/dispensaire-kakande" class="btn btn-primary btn-xl text-uppercase" target="_blank">CotiZup</a>
+          </div>
+          <hr/>
+          <div class="row mt-5">
+            <div class="col-lg-6 text-center">
+              <p class="bold">Par Paypal</p>
+              <a href="https://www.paypal.com/paypalme/assojeuneskakande" class="" target="_blank">
+                <span class="fa-stack fa-4x">
+                  <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                  <i class="fab fa-cc-paypal fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                </span>
+              </a>
+              <p class="mobile-font-size mt-4">associationjeuneskakande@gmail.com</p>
+            </div>
+            <div class="col-lg-6 mt-5 mt-lg-0 text-center">
+              <p class="bold">Par Virement/Chèque</p>
+              <p>Pour faire un virement, veuillez envoyer un mail à l'adresse suivante pour recevoir le RIB :
+                <strong class="mobile-font-size italic">contact@associationjeuneskakande.org</strong>
+              </p>
+              <hr/>
+              <p>Par chèque établi à l'ordre "ASSOCIATIONS DES JEUNES DE KAKANDÉ" à l'adresse suivante :</p>
+              <p>ASSOCIATION DES JEUNES DE KAKANDÉ<br>
+              15 Passage du poteau <br>
+              75018 PARIS
+              </p>
+            </div>
           </div>
         </div>
       </div>
