fix: add some spaces in sass lines files

--- a/src/assets/scss/_medias.scss
+++ b/src/assets/scss/_medias.scss
@@ -21,7 +21,8 @@
     .iframe-container {
         position: relative;
         padding-bottom: 56.25%; /* ratio 16/9 */
-        height: 0; overflow: hidden;
+        height: 0;
+        overflow: hidden;
         clear: both;
     }
 
