feat: add new partenary

--- a/src/template/Association/association.ejs
+++ b/src/template/Association/association.ejs
@@ -135,6 +135,27 @@
             </p>
           </div>
           <div class="partenary-section">
+            <h4>DNARPROMA (Direction Nationale de Régulation et de Promotion des ONG et du Mouvement Associatif)</h4>
+            <p>La Direction Nationale de Régulation et de Promotion des ONG et du Mouvement Associatif nous accorde l'autorisation d'exercice dans la région de Boké dans le cadre de nos activités. Delphine OUENDENO en est la directrice.</p>
+          </div>
+          <div class="partenary-section">
+            <h4>P.H.A.M.M (Pharmaciens Humanitaires d'Auvergne Matériel Médical)</h4>
+            <p>L'association Pharmaciens Humanitaires d'Auvergne Matériel Médical reconnu association d'intérêt général, récupèrent du matériel médical à destination des ONG et autres organismes caritatifs.
+              Grâce leurs aides et à leurs générosités, nous avons pu bénéficier d'un conteneur de 40 pieds rempli de matériel médical à destination de notre nouveau centre de santé à Dabankou.<br>
+              <a class="d-block mt-3" target="_blank"
+              href="https://www.pharmaciens-humanitaires.com/home.html">
+              <span class="fa-stack fa-sm">
+                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                <i class="fas fa-external-link-alt fa-stack-1x fa-inverse"></i>
+              </span>
+              Leur site internet : https://www.pharmaciens-humanitaires.com/home.html</a>
+            </p>
+          </div>
+          <div class="partenary-section">
+            <h4>Conakry Nouvelles</h4>
+            <p>Conakry Nouvelles est une agence multimédia qui évolue dans le domaine de la communication audio visuelle. Elle nous accompagne notamment dans la publicité de notre projet afin de le faire connaître du grand public.</p>
+          </div>
+          <div class="partenary-section">
             <h4>Les habitants du village de Dabankou</h4>
             <p>Les parents des jeunes de la diaspora se sont également investis dans le projet en se portant à notre
               disposition pour
